<resources>
    <string name="app_name">AppDelivery</string>
    <string name="home_welcome">Selamat Datang</string>
    <string name="home_admin">Selamat Datang,\n%s</string>
    <string name="home_choose">Pilih Menu</string>
    <string name="home_courier">Kurir</string>
    <string name="home_tracking">Tracking</string>
    <string name="home_box">Barang</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="success">Sukses</string>
    <string name="failed">Gagal</string>
    <string name="delete_kurir_title">Hapus Kurir</string>
    <string name="delete_siswa_body">Apakah anda yakin ingin menghapus kurir ?</string>
    <string name="cancelBottomSheet">Batal</string>
    <string name="saveBottomSheet">Simpan</string>
    <string name="pilihGambarBottomSheet">Pilih Gambar</string>
    <string name="titlePassword">Masukkan Password Anda</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="new_password_again">Ulangi Password Baru</string>
    <string name="titleName">Masukkan Nama Lengkap Anda</string>
    <string name="titleUsername">Masukkan Username Anda</string>
    <string name="titleAlamat">Masukkan Alamat Anda</string>
    <string name="rb_001">Barang Masih Di Gudang</string>
    <string name="rb_002">Barang Sedang Diambil Oleh Kurir Di Gudang</string>
    <string name="rb_003">Barang Sedang Di Perjalanan</string>
    <string name="rb_004">Kondisi Jalan Macet</string>
    <string name="rb_005">Barang Akan Tiba Dilokasi</string>
    <string name="rb_006">Barang Sudah Diterima Pembeli</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled</string>
    <string name="distance">Jarak Dari Lokasi Ke Destinasi Tujuan</string>
    <string name="pick_route_location">Pilih Lokasi Rute</string>
    <string name="nama_kurir">Nama Kurir</string>
    <string name="edit">Edit</string>
    <string name="km">%s Kilometer</string>
    <string name="kmm">%s Km</string>
    <string name="m">%s meter</string>
    <string name="latlong">Latitude: %s\nLongitude: %s</string>
    <string name="tab_text_1">Belum Dikirim</string>
    <string name="tab_text_2">Sudah Dikirim</string>
    <string name="simpan">Simpan</string>
    <string name="not_found">Not Found</string>
    <string name="keluar">Keluar</string>
    <string name="empty_send_barang_kurir">Tidak Ada Barang Yang Akan Diantar</string>
    <string name="empty_send_done_barang_kurir">Daftar Barang Yang Sudah Diantar Tidak Ada</string>
    <string name="pilih_lokasi_saya_sekarang">Pilih Lokasi Saya Sekarang</string>
    <string name="ambil_gambar_barang_sudah_tiba">Ambil Gambar</string>
    <string name="save">Simpan</string>
    <string name="title_activity_maps">Map</string>
    <string name="pick_now_location">Pilih Lokasi Anda Sekarang</string>
</resources>