<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.courier.barang.manage.ManageTrackingKurirActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout01"
        android:padding="16dp">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Detail Barang"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/rg_number1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_track_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/rb_002" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_track_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/rb_003" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_track_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/rb_004" />

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pilih Lokasi"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_choose_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_lokasi_saya_sekarang"
                    android:textColor="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_failed_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_choose_location"
                    android:layout_marginTop="6dp"
                    android:text="Pilih Lokasi Terlebih Dahulu"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_location_latlong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_choose_location"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    tools:text="Latitude: -1.91231239\nLongitude: 1.12312311" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/pb_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </androidx.core.widget.NestedScrollView>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>