<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.admin.tracking.manage.ManageFragment">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBarLayout01"
            android:padding="16dp">

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Manage Tracking"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="200dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Detail Barang"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/rg_number1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_track_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/rb_001" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_track_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/rb_002" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_track_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/rb_003" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_track_04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/rb_004" />

                </RadioGroup>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pilih Lokasi"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_choose_location1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Lokasi"
                    android:textColor="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Barang"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_package"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Simpan"
                    android:textColor="@color/black" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </ScrollView>
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

</FrameLayout>