<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.DashboardFragment">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout01"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Toolbar.Primary" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_below="@+id/appBarLayout01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <com.google.android.material.circularreveal.CircularRevealRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationViewImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/falling_parcel" />

                <com.google.android.material.circularreveal.CircularRevealRelativeLayout
                    android:id="@+id/rr_welcome01"
                    android:layout_below="@+id/animationViewImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_welcome"
                        android:text="@string/home_welcome"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_name_welcoming"
                        android:layout_below="@+id/animationViewImage"
                        android:layout_toEndOf="@+id/tv_welcome"
                        android:text="@string/home_admin"
                        android:layout_marginStart="4dp"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_menu_selection"
                    android:layout_below="@+id/rr_welcome01"
                    android:text="@string/home_choose"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.circularreveal.CircularRevealGridLayout
                    android:layout_below="@+id/tv_menu_selection"
                    android:layout_marginTop="10dp"
                    android:columnCount="2"
                    android:rowCount="6"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        app:cardElevation="6dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="16dp"
                            android:background="#D4D8DC"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.airbnb.lottie.LottieAnimationView
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/courier_ani"
                                android:layout_width="80dp"
                                android:layout_height="80dp" />

                            <TextView
                                android:layout_marginTop="12dp"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:text="@string/home_courier"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        app:cardElevation="6dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="16dp"
                            android:background="#D4D8DC"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.airbnb.lottie.LottieAnimationView
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/map_location"
                                android:layout_width="80dp"
                                android:layout_height="80dp" />

                            <TextView
                                android:layout_marginTop="12dp"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:text="@string/home_tracking"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        app:cardElevation="6dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="16dp"
                            android:background="#D4D8DC"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.airbnb.lottie.LottieAnimationView
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/box_ani"
                                android:layout_width="80dp"
                                android:layout_height="80dp" />

                            <TextView
                                android:layout_marginTop="12dp"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:text="@string/home_box"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </com.google.android.material.circularreveal.CircularRevealGridLayout>

            </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

        </ScrollView>

    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>


</FrameLayout>